<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/llVideoCtrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/overlay_background"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/btnPrevFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_background"
                    android:contentDescription="@string/file_prev"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_keyboard_double_arrow_left_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/btnSeekBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_background"
                    android:contentDescription="@string/seek_back"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnPrevFile" />

                <ImageButton
                    android:id="@+id/btnPlay"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:background="@drawable/ic_baseline_pause_24"
                    android:contentDescription="@string/play_pause"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnSeekBack" />

                <TextView
                    android:id="@+id/tvSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/speed_normal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/btnPlay"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btnNextFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_background"
                    android:contentDescription="@string/file_next"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_keyboard_double_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvSpeed" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/overlay_background"
            android:contentDescription="@string/mute"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_volume_up_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
